Fix mobile: shift theme toggle left of hamburger button
On screens narrower than $large (925px), the toggle sits at right:3.5rem
instead of right:1em, clearing the hamburger button at right:0.

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -53,6 +53,10 @@
   right: 1em;
   top: 50%;
   transform: translateY(-50%);
+
+  @include breakpoint(max-width $large) {
+    right: 3.5rem;
+  }
   background: none;
   border: 1px solid $border-color;
   border-radius: 50%;
